--- a/gui/index.html
+++ b/gui/index.html
@@ -1,1 +1,25 @@
 
+<head>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+</head>
+
+<body>
+  <div class="container">
+    <div class="jumbotron">
+      <h1>Powered by Python</h1>
+      <p>Rendered by HTML and JavaScript</p>
+    </div>
+    <br>
+    <div class="row">
+      <div class="col-xs-3">
+      </div>
+      <div class="col-xs-6">
+        <img style="width:30%" src="images/weather-icon.png"/>
+        <br>
+        <button class="btn btn-info"><a style="color:white" href="spam.html">Spam Check</a></button>
+      </div>
+      <div class="col-xs-3">
+      </div>
+    </div>
+</div>
+<body>
